--- a/src/styles/_jfReportsSVG.scss
+++ b/src/styles/_jfReportsSVG.scss
@@ -131,7 +131,6 @@
   .icon-aspectLock, .icon-aspectUnlock {
     width: 12px;
     height: 14px;
-    margin-top: 10px;
   }
 
   .icon-aspectLock {
